--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-ipykernel==6.29.5
+tensorflow==2.15.0
+streamlit
 numpy==1.26.4
-pillow==11.1.0
-labelme==5.6.0
-tensorflow==2.14.0
-opencv-python==4.10.0.84
-matplotlib==3.10.0
+opencv-python-headless
+matplotlib
+Pillow
